[project]
name = "photonics"
version = "0.1.0"
description = "Photonic integrated device simulation utilities."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy==2.4.6",
    "scipy==1.17.1",
    "matplotlib==3.10.9",
    "h5py==3.16.0",
    "pandas==3.0.3",
    "xarray==2026.4.0",
    "shapely==2.1.2",
    "gdstk==1.0.0",
    "gdspy==1.6.13",
    "gdsfactory==9.43.0",
    "jax==0.9.2",
    "klayout==0.30.9",
    "modesolverpy==0.4.4",
    "sax==0.18.1",
    "simphony==0.6.1",
    "scikit-rf==1.12.0",
    "tidy3d==2.11.2",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Meep/PyMeep is intentionally not listed here because the real FDTD package is
# distributed through conda-forge, not PyPI. Install it in the `pic` conda
# environment with:
#
#   mamba install -c conda-forge pymeep
